--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.29.0",
     "next": "16.1.4",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
     "shadcn": "^3.7.0",
